--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "gatsby-starter-tailwindcss",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A simple starter to get up and developing quickly with Gatsby and Tailwind",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Luke Bennett <hello@lukebennett.com.au>",
   "dependencies": {
-    "gatsby": "^2.13.54",
+    "autoprefixer": "^9.6.1",
+    "gatsby": "^2.13.55",
     "gatsby-image": "^2.2.8",
+    "gatsby-plugin-canonical-urls": "^2.1.2",
     "gatsby-plugin-manifest": "^2.2.5",
-    "gatsby-plugin-offline": "^2.2.5",
+    "gatsby-plugin-netlify": "^2.1.4",
+    "gatsby-plugin-postcss": "^2.1.2",
+    "gatsby-plugin-purgecss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.2.10",
+    "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-sharp": "^2.2.6",
+    "postcss-import": "^12.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "tailwindcss": "^1.1.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
   },
-  "keywords": [
-    "gatsby"
-  ],
   "license": "MIT",
   "scripts": {
+    "analyze": "npm run analyze:lint && npm run analyze:prettier",
+    "analyze:lint": "eslint --ext .jsx --ext .js .",
+    "analyze:prettier": "prettier --list-different '**/*.{js,css,md,json}'",
     "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "build:serve": "npm run build && npm run serve",
+    "develop": "gatsby develop --open",
+    "fix": "npm run fix:lint && npm run fix:prettier",
+    "fix:lint": "eslint --ext .jsx --ext .js . --fix",
+    "fix:prettier": "prettier --write '**/*.{js,css,md,json}'",
     "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "serve": "gatsby serve --open"
   }
 }
