--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Luke Bennett <hello@lukebennett.com.au>",
   "dependencies": {
     "autoprefixer": "^9.6.1",
-    "gatsby": "^2.13.55",
+    "gatsby": "^2.13.57",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-canonical-urls": "^2.1.2",
     "gatsby-plugin-manifest": "^2.2.5",
@@ -15,7 +15,7 @@
     "gatsby-plugin-purgecss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.2.10",
+    "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-sharp": "^2.2.6",
@@ -24,22 +24,29 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "tailwindcss": "^1.1.0"
+    "tailwindcss": "^1.1.1"
   },
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-wesbos": "0.0.19",
+    "eslint-plugin-html": "^5.0.5",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.18.2"
   },
   "license": "MIT",
   "scripts": {
-    "analyze": "npm run analyze:lint && npm run analyze:prettier",
-    "analyze:lint": "eslint --ext .jsx --ext .js .",
-    "analyze:prettier": "prettier --list-different '**/*.{js,css,md,json}'",
     "build": "gatsby build",
     "build:serve": "npm run build && npm run serve",
     "develop": "gatsby develop --open",
-    "fix": "npm run fix:lint && npm run fix:prettier",
-    "fix:lint": "eslint --ext .jsx --ext .js . --fix",
-    "fix:prettier": "prettier --write '**/*.{js,css,md,json}'",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "start": "npm run develop",
     "serve": "gatsby serve --open"
   }
