--- a/package.json
+++ b/package.json
@@ -5,31 +5,32 @@
   "version": "0.1.0",
   "author": "Luke Bennett <hello@lukebennett.com.au>",
   "dependencies": {
-    "autoprefixer": "^9.7.2",
-    "gatsby": "^2.18.1",
-    "gatsby-image": "^2.2.33",
-    "gatsby-plugin-canonical-urls": "^2.1.15",
-    "gatsby-plugin-manifest": "^2.2.29",
-    "gatsby-plugin-netlify": "^2.1.25",
-    "gatsby-plugin-postcss": "^2.1.15",
+    "autoprefixer": "^9.7.3",
+    "gatsby": "^2.18.6",
+    "gatsby-image": "^2.2.34",
+    "gatsby-plugin-canonical-urls": "^2.1.16",
+    "gatsby-plugin-manifest": "^2.2.31",
+    "gatsby-plugin-netlify": "^2.1.27",
+    "gatsby-plugin-postcss": "^2.1.16",
     "gatsby-plugin-purgecss": "^4.0.1",
-    "gatsby-plugin-react-helmet": "^3.1.15",
+    "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.3.2",
-    "gatsby-plugin-sitemap": "^2.2.21",
-    "gatsby-source-filesystem": "^2.1.38",
-    "gatsby-transformer-sharp": "^2.3.5",
+    "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-sitemap": "^2.2.22",
+    "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-transformer-sharp": "^2.3.6",
     "postcss-import": "^12.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-modal": "^3.11.1",
+    "tailwindcss": "^1.1.4",
     "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.6.0",
+    "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-wesbos": "0.0.19",
@@ -37,7 +38,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "prettier": "^1.19.1"
   },
