--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-helmet": "^5.2.1",
     "react-modal": "^3.11.1",
     "tailwindcss": "^1.1.4",
-    "tailwindcss": "^1.1.3"
+    "typeface-inter": "^3.10.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
