--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "version": "0.1.0",
   "author": "Luke Bennett <hello@lukebennett.com.au>",
   "dependencies": {
+    "@tailwindcss/ui": "^0.1.3",
     "autoprefixer": "^9.7.4",
-    "gatsby": "^2.19.12",
-    "gatsby-image": "^2.2.40",
+    "cssnano": "^4.1.10",
+    "gatsby": "^2.19.28",
+    "gatsby-image": "^2.2.42",
     "gatsby-plugin-canonical-urls": "^2.1.20",
-    "gatsby-plugin-manifest": "^2.2.41",
-    "gatsby-plugin-netlify": "^2.1.32",
+    "gatsby-plugin-manifest": "^2.2.42",
+    "gatsby-plugin-netlify": "^2.1.33",
     "gatsby-plugin-postcss": "^2.1.20",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.22",
@@ -19,17 +21,17 @@
     "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-transformer-json": "^2.2.26",
-    "gatsby-transformer-sharp": "^2.3.14",
+    "gatsby-transformer-sharp": "^2.3.16",
     "postcss-import": "^12.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
-    "tailwindcss": "^1.1.4",
-    "typeface-inter": "^3.11.2"
+    "tailwindcss": "^1.2.0",
+    "typeface-inter": "^3.12.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
@@ -39,7 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "prettier": "^1.19.1"
   },
   "license": "MIT",
